2001-01-10  Ryan Nunn <triforce@merlin.net.au>
	* gamma.h : Gamma Table Class
	* Makefile.am : Added gamma.h
	* Makefile.Win32 : Fixed 'Clean'
	* bggame.cc : Faster Fades in Endgame
	* effects.* : Attempting to prevent 2 lighting effects from occuring at the
	  same time.
	* exult.cc : + and - now do gamma correction.
	* palette.* : New methods so palette class could be used by Flics
	* audio/xmidi.* : Now uses Gamma Table Class
	* flic/playfli.* : Changes to use Palette class and methods to get the
	  palette
	* gumps/Paperdoll_gump : Some fixes. Defining SHOW_USECODE_CONTAINER will
	  show the usecode container as a backpack in the upperleft.
	* imagewin/iwin8.* : Three Channel Gamma Correction ability added
	* objs/contain.h : Gump for usecode container.

2001-01-09  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* audio/audio.cc, audio/Mixer.cc: experimental audio-buffer fix

2000-01-08  Max Horn  <max@quendi.de>
	* I had broken the game by replacing tiles_per_schunk with c_fade_out_time
	  (instead of c_tiles_per_schunk). Fixed. Sorry again.

2001-01-08  Christoph Reichenbach  <jameson@linuxgames.com>

	* usecode/conversation.cc: Included alpha_kludges.h
	* audio/xmidi.cc: Moved xmidi.h into non-Alpha block

2000-01-08  Max Horn  <max@quendi.de>
	* exult_constants.h: changed constants to be prefixed by c_
	* exult_constants.h: added some new constants (esp. for those -359 values!)
	* lots-o-files: updated to reflect changes to exult_constants.h
	* removed some dependencies on objs.h (most importantly, from gamewin.h!)
	* objs/flags.h: added, contains item flags
	* objs/objlist.h: added, contains Object_list -> enables us to remove more dependencies
	* audio/Mixer.cc/h: made temp_buffer (from fill_audio_func) a class member and pre-allocate it
	  two reasons for this: 1) more efficient 2) no more crash on MacOS
	
2001-01-08  Tristan Tarrant <nadir@users.sourceforge.net>
	* NEWS: updated
	* audio/midi_drivers/Timidity_binary.cc: tiny useless fixes
